fixed vertical spacing between modules

--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,5 @@
   border-radius: 25px;
   border: 2px solid black;
   padding: 16px;
+  margin-bottom: 16px;
 }
